added a new paragraph

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <p>Nice to meet you all. I am excited for working with you guys :)</p>
         <p>I love drinking H<sub>2</sub>0</p>
         <p>10<sup>2</sup></p>
+        <p>I love Chris and Stella</p>
 
         <!-- Image -->
         <img width="200" src="https://mblogthumb-phinf.pstatic.net/MjAxOTAxMjFfMTUw/MDAxNTQ4MDU1MzExNzY1.tTPgV7Y53CxgWw3856U1gJ0RxXIhhAlsDSXk9vjpLlIg.L8_fRbMx34kjXImdPY-6P7s_RAzLHtFcctDCS_KnV9kg.JPEG.kbsomang/SE-6a907ef0-c480-467a-a671-33efd0960a71.jpg?type=w800" alt=""/>
